--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,5 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/public/movie_template.html" }
+  ]
 }
